--- a/daethereum.html
+++ b/daethereum.html
@@ -156,13 +156,12 @@
 							<h2>Roadmap</h2>
 						</header>
 							<h1><b>2017</b></h1>
-							<p><b>Q1</b>: Dae Platform Plans</p>
+							<p><b>Q1</b>: Dae Platform Plans.</p>
 							<h1><b>2018</b></h1>
-							<p><b>Q1</b>: Initial Daethereum Offering (Initial Token Sale)</p>
-							<p><b>Q2</b>: Tokenization & Listed In EtherDelta, ForkDelta</p>
-							<p><b>Q3</b>: Launch of Online Information Media Site</p>
-							<p><b>Q4</b>: Launch of Travel Comparison Ticket Price Site</p>
-							<p><b>Q5</b>: Launch of Dae Platform Markets</p>
+							<p><b>Q1</b>: Initial Daethereum Offering (Initial Token Sale).</p>
+							<p><b>Q2</b>: Tokenization & Listed In EtherDelta, ForkDelta.</p>
+							<p><b>Q3</b>: Launch of Travel Comparison Ticket Price & Media Information.</p>
+							<p><b>Q4</b>: Launch of Dae Platform Markets.</p>
 							<h1><b>2019</b></h1>
 							<p><b>Q1</b>: Gathering And Discuss Dae Platform Development</p>
 							<p><b>Q2</b>: Launch of New Projects Discussed.</p>
@@ -177,7 +176,7 @@
 				</header>
 					<p>1. Each completed Sales Round of Daethereum (DTHR), Daethereum (DTHR) will be delivered to your ethereum address. Either the buyer or the only each Bounty & Airdrop.<br />
 					2. After completion of the Initial Token Sale, Daethereum (DTHR) may trading at EtherDelta and ForkDelta.<br />
-					3. Daethereum (DTHR) to build Dae Platform project plan: Tokenisasi, Online Media Information Site, Tour Ticket Comparison, Dae Platform Markets, New Projects Discussed.<br />
+					3. Daethereum (DTHR) to build Dae Platform project plan: Tokenization, Travel Comparison Ticket Price, Media Information, Dae Platform Markets, Development Plans.<br />
 					4. Have experienced team in their field.</p>
 			</section>
 
