--- a/daethereum.html
+++ b/daethereum.html
@@ -201,9 +201,9 @@
 					  <ul class="price">
 					    <li class="header">Press</li>
 					    <li>BitcoinTalk English</li>
-					    <li>BitcoinTalk Bahasa Indonesia</li>
+					    <li>Indonesian BitcoinTalk</li>
 					    <li>Triafa.com</li>
-					    <li>FJB KasKus Indonesia</li>
+					    <li>Triafa.com Forum</li>
 					    <li>Coming Soon</li>
 					    <li>Coming Soon</li>
 					  </ul>
@@ -219,14 +219,6 @@
 					    <li>Coming Soon</li>
 					  </ul>
 					</div>
-					<ul class="actions">
-						<center>
-						<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale" class="button scrolly">Buy With Bitcoin</a></li>
-						<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
-						<li><a target="_blank" href="https://coingate.com/pay/daeplatform" class="button scrolly">CoinGate Payment Gateway</a></li>
-						<li><a target="_blank" href="https://goo.gl/forms/P1VLD2k8GZ62ohP63" class="button scrolly">Payment Confirmation</a></li>
-						</center>
-					</ul>
 				</div>
 			</section>
 
