--- a/daethereum.html
+++ b/daethereum.html
@@ -174,7 +174,7 @@
 				<header class="major">
 					<center><h2>Why Daethereum?</a></h2></center>
 				</header>
-					<p>1. Each completed Sales Round of Daethereum (DTHR), Daethereum (DTHR) will be delivered to your ethereum address. Either the buyer or the only each Bounty & Airdrop.<br />
+					<p>1. After completion of the Initial Token Sale, Daethereum (DTHR) will be delivered to your ethereum address. Either the buyer or the only each Bounty & Airdrop.<br />
 					2. After completion of the Initial Token Sale, Daethereum (DTHR) may trading at EtherDelta and ForkDelta.<br />
 					3. Daethereum (DTHR) to build Dae Platform project plan: Tokenization, Travel Comparison Ticket Price, Media Information, Dae Platform Markets, Development Plans.<br />
 					4. Have experienced team in their field.</p>
@@ -189,34 +189,34 @@
 					<div class="columns">
 					  <ul class="price">
 					    <li class="header">Partners</li>
-					    <li>Ethereum Platform</li>
-					    <li>Blockchain.info</li>
-					    <li>CoinGate</li>
-					    <li>MEW</li>
-					    <li>Coinomi</li>
-					    <li>Kcash</li>
+						  <li>><a target="_blank" href="#">Ethereum Platform</a></li>
+						  <li>><a target="_blank" href="#">Blockchain.info</a></li>
+						  <li>><a target="_blank" href="#">CoinGate</a></li>
+						  <li>><a target="_blank" href="#">MEW</a></li>
+						  <li>><a target="_blank" href="#">Coinomi</a></li>
+						  <li>><a target="_blank" href="#">Kcash</a></li>
 					  </ul>
 					</div>
 					<div class="columns">
 					  <ul class="price">
 					    <li class="header">Press</li>
-					    <li>BitcoinTalk English</li>
-					    <li>Indonesian BitcoinTalk</li>
-					    <li>Triafa.com</li>
-					    <li>Triafa.com Forum</li>
-					    <li>Coming Soon</li>
-					    <li>Coming Soon</li>
+						  <li>><a target="_blank" href="#">English BitcoinTalk</a></li>
+						  <li>><a target="_blank" href="#">Indonesian BitcoinTalk</a></li>
+						  <li>><a target="_blank" href="#">Triafa.com</a></li>
+						  <li>><a target="_blank" href="#">Triafa.com Forum</a></li>
+						  <li>><a target="_blank" href="#">Coming Soon</a></li>
+						  <li>><a target="_blank" href="#">Coming Soon</a></li>
 					  </ul>
 					</div>
 					<div class="columns">
 					  <ul class="price">
 					    <li class="header">Link</li>
-					    <li>English Whitepaper</li>
-					    <li>Indonesian Whitepaper</li>
-					    <li>Etherscan</li>
-					    <li>Coming Soon</li>
-					    <li>Coming Soon</li>
-					    <li>Coming Soon</li>
+						  <li><a target="_blank" href="WhitePaper-EN.pdf">English Whitepaper</a></li>
+						  <li>><a target="_blank" href="WhitePaper-ID.pdf">Indonesian Whitepaper</a></li>
+						  <li>><a target="_blank" href="#">Etherscan</a></li>
+						  <li>><a target="_blank" href="#">Coming Soon</a></li>
+						  <li>><a target="_blank" href="#">Coming Soon</a></li>
+						  <li>><a target="_blank" href="#">Coming Soon</a></li>
 					  </ul>
 					</div>
 				</div>
