--- a/daethereum.html
+++ b/daethereum.html
@@ -189,34 +189,34 @@
 					<div class="columns">
 					  <ul class="price">
 					    <li class="header">Partners</li>
-						  <li>><a target="_blank" href="#">Ethereum Platform</a></li>
-						  <li>><a target="_blank" href="#">Blockchain.info</a></li>
-						  <li>><a target="_blank" href="#">CoinGate</a></li>
-						  <li>><a target="_blank" href="#">MEW</a></li>
-						  <li>><a target="_blank" href="#">Coinomi</a></li>
-						  <li>><a target="_blank" href="#">Kcash</a></li>
+						  <li><a target="_blank" href="#">Ethereum Platform</a></li>
+						  <li><a target="_blank" href="#">Blockchain.info</a></li>
+						  <li><a target="_blank" href="#">CoinGate</a></li>
+						  <li><a target="_blank" href="#">MEW</a></li>
+						  <li><a target="_blank" href="#">Coinomi</a></li>
+						  <li><a target="_blank" href="#">Kcash</a></li>
 					  </ul>
 					</div>
 					<div class="columns">
 					  <ul class="price">
 					    <li class="header">Press</li>
-						  <li>><a target="_blank" href="#">English BitcoinTalk</a></li>
-						  <li>><a target="_blank" href="#">Indonesian BitcoinTalk</a></li>
-						  <li>><a target="_blank" href="#">Triafa.com</a></li>
-						  <li>><a target="_blank" href="#">Triafa.com Forum</a></li>
-						  <li>><a target="_blank" href="#">Coming Soon</a></li>
-						  <li>><a target="_blank" href="#">Coming Soon</a></li>
+						  <li><a target="_blank" href="#">English BitcoinTalk</a></li>
+						  <li><a target="_blank" href="#">Indonesian BitcoinTalk</a></li>
+						  <li><a target="_blank" href="#">Triafa.com</a></li>
+						  <li><a target="_blank" href="#">Triafa.com Forum</a></li>
+						  <li><a target="_blank" href="#">Coming Soon</a></li>
+						  <li><a target="_blank" href="#">Coming Soon</a></li>
 					  </ul>
 					</div>
 					<div class="columns">
 					  <ul class="price">
 					    <li class="header">Link</li>
 						  <li><a target="_blank" href="WhitePaper-EN.pdf">English Whitepaper</a></li>
-						  <li>><a target="_blank" href="WhitePaper-ID.pdf">Indonesian Whitepaper</a></li>
-						  <li>><a target="_blank" href="#">Etherscan</a></li>
-						  <li>><a target="_blank" href="#">Coming Soon</a></li>
-						  <li>><a target="_blank" href="#">Coming Soon</a></li>
-						  <li>><a target="_blank" href="#">Coming Soon</a></li>
+						  <li><a target="_blank" href="WhitePaper-ID.pdf">Indonesian Whitepaper</a></li>
+						  <li><a target="_blank" href="#">Etherscan</a></li>
+						  <li><a target="_blank" href="#">Coming Soon</a></li>
+						  <li><a target="_blank" href="#">Coming Soon</a></li>
+						  <li><a target="_blank" href="#">Coming Soon</a></li>
 					  </ul>
 					</div>
 				</div>
