--- a/daethereum.html
+++ b/daethereum.html
@@ -220,6 +220,12 @@
 					  </ul>
 					</div>
 				</div>
+				<ul class="actions">
+					<li><a target="_blank" href="https://www.blockchain.com/en/btc/payment_request?address=1DaeBkjf9BC79DTA7bZL7AA4eVoDQL9Aj7&message=Daethereum+(DTHR)+-+Initial+Token+Sale" class="button scrolly">Buy With Bitcoin</a></li>
+					<li><a target="_blank" href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button scrolly">Buy With Ethereum</a></li>
+					<li><a target="_blank" href="https://coingate.com/pay/daeplatform" class="button scrolly">CoinGate Payment Gateway</a></li>
+					</center>
+				</ul>
 			</section>
 
 		<!-- Five -->
