Initial Daethereum Offering
Daethereum (DTHR) - Initial Token Sale

--- a/daethereum.html
+++ b/daethereum.html
@@ -75,7 +75,7 @@
 				<div class="inner">
 					<img src="dthr/Daethereum.png" />
 					<h1><strong>Daethereum (DTHR)</strong></h1>
-					<p><b>Property</b></p>
+					<p><b>Spesification</b></p>
 					<p>Token Name: Daethereum<br />
 					Token Symbol: DTHR<br />
 					Type: ERC20<br />
