--- a/bounty-airdrop.html
+++ b/bounty-airdrop.html
@@ -26,7 +26,7 @@
 				</header>
 				<ul class="actions">
 					<center>
-					<li><a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1" class="button scrolly">Filling In Form</a></li>
+					<li><a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1" class="button scrolly" class="button scrolly">Filling In Form</a></li>
 					</center>
 				</ul>
 				</div>
