--- a/bounty-airdrop.html
+++ b/bounty-airdrop.html
@@ -26,6 +26,7 @@
 				</header>
 				<ul class="actions">
 					<center>
+					<li><a target="_blank" href="https://www.daeplatform.net/daethereum" class="button scrolly">Initial Daethereum Offering</a></li>
 					<li><a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1" class="button scrolly" class="button scrolly">Filling In Form</a></li>
 					</center>
 				</ul>
@@ -105,11 +106,11 @@
             '#token-txs-11', // Placeholder element
             'tokenHistory', // Widget type
             {
-                address: '0x2c8d7634d0daf8db5c55b3ab0821df4a75b0913f', // keep empty to show all tokens
+                address: '0xcf9d71255c9e3583c51c5872b5542f0fd71fbff6', // keep empty to show all tokens
                 limit: 5, // Number of records to show
             },
             {
-                header: '<div class="txs-header">Daereum (DAER)</div>', // customized header
+                header: '<div class="txs-header">Explorer</div>', // customized header
                 loader: '<div class="txs-loading">* L * O * A * D * I * N * G *<br><small>Please wait...</small></div>', // customized loader
                 bigScreenTable: '<tr><td>%from% <span class="tx-send">sent</span> <span class="tx-amount">%amount% %token%</span> <span class="tx-send">to</span> %to% <span class="tx-send">at</span><span class="tx-date"> %datetime%</span></td></tr>'
             }
