--- a/bounty-airdrop.html
+++ b/bounty-airdrop.html
@@ -16,6 +16,57 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+
+<style>
+* {
+    box-sizing: border-box;
+}
+.columns {
+    float: left;
+    width: 33.3%;
+    padding: 8px;
+}
+.price {
+    list-style-type: none;
+    border: 1px solid #eee;
+    margin: 0;
+    padding: 0;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+}
+.price:hover {
+    box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
+}
+.price .header {
+    background-color: #111;
+    color: white;
+    font-size: 25px;
+}
+.price li {
+    border-bottom: 1px solid #eee;
+    padding: 20px;
+    text-align: center;
+}
+.price .grey {
+    background-color: #eee;
+    font-size: 20px;
+}
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 10px 25px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+}
+@media only screen and (max-width: 600px) {
+    .columns {
+        width: 100%;
+    }
+}
+</style>
+
 	</head>
 	<body>
 
@@ -38,7 +89,7 @@
 				<div class="container">
 					<p><b>Telegram Campaign</b></p>
 					<p>1. Join Our Telegram Channel: <a target="_blank" href="https://t.me/daeplatform">t.me/daeplatform</a><br />
-					2. Join Our Telegram Group: <a target="_blank" href="https://t.me/DaePlatformGroup>t.me/DaePlatformGroup</a><br />
+					2. Join Our Telegram Group: <a target="_blank" href="https://t.me/DaePlatformGroup"t.me/DaePlatformGroup</a><br />
 					Reward: 10 DTHR</p>
 					<p><b>Social Media Campaign</b></p>
 					<p>1. Like Our FansPage: <a target="_blank" href="https://fb.com/daeplatform">fb.com/daeplatform</a><br />
