--- a/bounty-airdrop.html
+++ b/bounty-airdrop.html
@@ -9,6 +9,7 @@
 		<title>Daethereum (DTHR) - Bounty & Airdrop</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="dthr/Daethereum.png">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -89,7 +90,7 @@
 				<div class="container">
 					<p><b>Telegram Campaign</b></p>
 					<p>1. Join Our Telegram Channel: <a target="_blank" href="https://t.me/daeplatform">t.me/daeplatform</a><br />
-					2. Join Our Telegram Group: <a target="_blank" href="https://t.me/DaePlatformGroup"t.me/DaePlatformGroup</a><br />
+					2. Join Our Telegram Group: <a target="_blank" href="https://t.me/DaePlatformGroup">t.me/DaePlatformGroup</a><br />
 					Reward: 10 DTHR</p>
 					<p><b>Social Media Campaign</b></p>
 					<p>1. Like Our FansPage: <a target="_blank" href="https://fb.com/daeplatform">fb.com/daeplatform</a><br />
