--- a/bounty-airdrop.html
+++ b/bounty-airdrop.html
@@ -75,12 +75,6 @@
 				<header class="major">
 					<center><h2>Daethereum (DTHR) - Bounty & Airdrop</h2></center>
 				</header>
-				<ul class="actions">
-					<center>
-					<li><a target="_blank" href="https://www.daeplatform.net/daethereum" class="button scrolly">Initial Daethereum Offering</a></li>
-					<li><a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1" class="button scrolly">Filling In Form</a></li>
-					</center>
-				</ul>
 				</div>
 			</section>
 
@@ -90,25 +84,30 @@
 					<p><b>Telegram Campaign</b></p>
 					<p>1. Join Our Telegram Channel: <a target="_blank" href="https://t.me/daeplatform">t.me/daeplatform</a><br />
 					2. Join Our Telegram Group: <a target="_blank" href="https://t.me/DaePlatformGroup">t.me/DaePlatformGroup</a><br />
+					3. <a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1">Filling in form.</a><br />
 					Reward: 10 DTHR</p>
 					<p><b>Social Media Campaign</b></p>
 					<p>1. Like Our FansPage: <a target="_blank" href="https://fb.com/daeplatform">fb.com/daeplatform</a><br />
 					2. Share: <a target="_blank" href="https://www.facebook.com/daeplatform/posts/1835697250073321">www.facebook.com/daeplatform/posts/1835697250073321</a><br />
 					3. Following Our Twitter: <a target="_blank" href="https://twitter.com/daeplatformnet">@daeplatformnet</a><br />
 					4. Retweet: <a target="_blank" href="https://twitter.com/daeplatformnet/status/1013760876371853312">twitter.com/daeplatformnet/status/1013760876371853312</a><br />
+					5. <a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1">Filling in form.</a><br />
 					Reward: 20 DTHR</p>
 					<p><b>BitcoinTalk Campaign</b></p>
 					<p>1. Create a thread about Daethereum (DTHR) in your language.<br />
+					2. <a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1">Filling in form.</a><br />
 					Reward: 100 DTHR<br />
 					Note<br/>
 					1. Newbie are not counted.<br />
 					2. The first thread of each language is accepted.</p>
 					<p><b>Blogger Campaign</b></p>
 					<p>1. Create a post about Daethereum (DTHR) on your blog.<br />
+					2. <a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1">Filling in form.</a><br />
 					Reward: 20 DTHR</p>
 					<p><b>YouTube Campaign</b></p>
 					<p>1. Create a video about Daethereum (DTHR).<br />
 					2. Upload your video to YouTube.<br />
+					3. <a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1">Filling in form.</a><br />
 					Reward: 500 DTHR</p>
 					<p><b>Refer Bounty & Airdrop, and get 10% from which they claim.</b></p>
 				</div>
