--- a/bounty-airdrop.html
+++ b/bounty-airdrop.html
@@ -85,30 +85,34 @@
 					<p>1. Join Our Telegram Channel: <a target="_blank" href="https://t.me/daeplatform">t.me/daeplatform</a><br />
 					2. Join Our Telegram Group: <a target="_blank" href="https://t.me/DaePlatformGroup">t.me/DaePlatformGroup</a><br />
 					3. <a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1">Filling in form.</a><br />
-					Reward: 10 DTHR</p>
+					Reward: 100 DTHR</p>
 					<p><b>Social Media Campaign</b></p>
 					<p>1. Like Our FansPage: <a target="_blank" href="https://fb.com/daeplatform">fb.com/daeplatform</a><br />
 					2. Share: <a target="_blank" href="https://www.facebook.com/daeplatform/posts/1835697250073321">www.facebook.com/daeplatform/posts/1835697250073321</a><br />
 					3. Following Our Twitter: <a target="_blank" href="https://twitter.com/daeplatformnet">@daeplatformnet</a><br />
 					4. Retweet: <a target="_blank" href="https://twitter.com/daeplatformnet/status/1013760876371853312">twitter.com/daeplatformnet/status/1013760876371853312</a><br />
 					5. <a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1">Filling in form.</a><br />
-					Reward: 20 DTHR</p>
+					Reward: 200 DTHR<br />
+					Bonus: 5 DTHR = 1 comment/like</p>
 					<p><b>BitcoinTalk Campaign</b></p>
 					<p>1. Create a thread about Daethereum (DTHR) in your language.<br />
 					2. <a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1">Filling in form.</a><br />
-					Reward: 100 DTHR<br />
+					Reward: 1,000 DTHR<br />
+					Bonus: 5 DTHR = 1 comment/like<br />
 					Note<br/>
 					1. Newbie are not counted.<br />
 					2. The first thread of each language is accepted.</p>
 					<p><b>Blogger Campaign</b></p>
 					<p>1. Create a post about Daethereum (DTHR) on your blog.<br />
 					2. <a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1">Filling in form.</a><br />
-					Reward: 20 DTHR</p>
+					Reward: 200 DTHR<br />
+					Bonus: 5 DTHR = 1 comment/like</p>
 					<p><b>YouTube Campaign</b></p>
 					<p>1. Create a video about Daethereum (DTHR).<br />
 					2. Upload your video to YouTube.<br />
 					3. <a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1">Filling in form.</a><br />
-					Reward: 500 DTHR</p>
+					Reward: 5,000 DTHR<br />
+					Bonus: 5 DTHR = 1 comment/like/view</p>
 					<p><b>Refer Bounty & Airdrop, and get 10% from which they claim.</b></p>
 				</div>
 			</section>
@@ -156,7 +160,7 @@
             '#token-txs-11', // Placeholder element
             'tokenHistory', // Widget type
             {
-                address: '0xcf9d71255c9e3583c51c5872b5542f0fd71fbff6', // keep empty to show all tokens
+                address: '0x9fe7b0d744fa22333e443cfbbe9469d2ddc1ee5c', // keep empty to show all tokens
                 limit: 5, // Number of records to show
             },
             {
