--- a/bounty-airdrop.html
+++ b/bounty-airdrop.html
@@ -98,7 +98,7 @@
 					<p>1. Create a thread about Daethereum (DTHR) in your language.<br />
 					2. <a target="_blank" href="https://goo.gl/forms/7TTrlt6EQi4led2p1">Filling in form.</a><br />
 					Reward: 1,000 DTHR<br />
-					Bonus: 1 DTHR = 1 comment/like<br />
+					Bonus: 1 DTHR = 1 comment<br />
 					Note<br/>
 					1. Newbie are not counted.<br />
 					2. The first thread of each language is accepted.</p>
