Dae Platform Explorer
Dae Platform Explorer
1. Daereum (DAER)
2. Daethereum (DTHR)

--- a/explorer.html
+++ b/explorer.html
@@ -30,9 +30,6 @@
 		<!-- Page -->
 			<section id="two" class="main style2">
 				<div class="container">
-				<header class="major">
-					<center><h2>Our Tokens Explorer</h2></center>
-				</header>
 <style>
     #token-txs-11 {
         line-height: 1.8;
@@ -90,10 +87,7 @@
 		<!-- Page -->
 		<section id="one" class="main style1">
 			<div class="container">
-				<header class="major">
-					<center><h2><a target="_blank" href="#">Top Tokens by Activity</a></h2></center>
-				</header>
-<div id="token-txs-12"></div>
+<div id="token-txs-11"></div>
 <script type="text/javascript">
     if (typeof (eWgs) === 'undefined') {
         document.write('<scr' + 'ipt src="https://api.ethplorer.io/widget.js?' + new Date().getTime().toString().substr(0, 7) + '" async></scr' + 'ipt>');
@@ -101,11 +95,17 @@
     }
     eWgs.push(function () {
         ethplorerWidget.init(
-            '#token-txs-12', // Placeholder element
-            'topTokens', // Widget type
+            '#token-txs-11', // Placeholder element
+            'tokenHistory', // Widget type
             {
-                limit: 10, // Number of records to show
-                period: 30 // period of calculating
+                address: '0x9fe7b0d744fa22333e443cfbbe9469d2ddc1ee5c', // keep empty to show all tokens
+                limit: 5, // Number of records to show
+            },
+            {
+                header: '<div class="txs-header">Daethereum (DTHR)</div>', // customized header
+                loader: '<div class="txs-loading">* L * O * A * D * I * N * G *<br><small>Please wait...</small></div>', // customized loader
+                bigScreenTable: '<tr><td>%from% <span class="tx-send">sent</span> <span class="tx-amount">%amount% %token%</span> <span class="tx-send">to</span> %to% <span class="tx-send">at</span><span class="tx-date"> %datetime%</span></td></tr>'
+
             }
 
         );
