--- a/daereum.html
+++ b/daereum.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dae Platform Explorer</title>
+		<title>Daereum Explorer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!-- Favicon -->
