--- a/daethereum.html
+++ b/daethereum.html
@@ -112,7 +112,7 @@
     <li>Starts on July 09, 2018</li>
     <li>Completed on July 13, 2018</li>
     <li>Sold 128,000 DTHR</li>
-    <li class="grey"><a href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button">Process</a></li>
+    <li class="grey"><a href="#" class="button">Done</a></li>
   </ul>
 </div>
 <div class="columns">
@@ -122,8 +122,8 @@
     <li>15 million DTHR</li>
     <li>Starts on Jul 16, 2018</li>
     <li>Completed on Jul 20, 2018</li>
-    <li>Sold 0 DTHR</li>
-    <li class="grey"><a href="#" class="button">Coming Soon</a></li>
+    <li>Sold 750 DTHR</li>
+    <li class="grey"><a href="#" class="button">Done</a></li>
   </ul>
 </div>
 <div class="columns">
@@ -133,8 +133,8 @@
     <li>10 million DTHR</li>
     <li>Starts on Jul 23, 2018</li>
     <li>Completed on Jul 27, 2018</li>
-    <li>Sold 0 DTHR</li>
-    <li class="grey"><a href="#" class="button">Coming Soon</a></li>
+    <li>Sold 100 DTHR</li>
+    <li class="grey"><a href="https://www.myetherwallet.com/?to=0xcf9D71255C9E3583C51C5872b5542f0fd71fBfF6#send-transaction" class="button">Process</a></li>
   </ul>
 </div>
 <ul class="actions">
